<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_app"
    app:startDestination="@id/exercisesFragment">

    <fragment
        android:id="@+id/exercisesFragment"
        android:name="com.example.workoutapp.fragments.ExercisesFragment"
        android:label="@string/exercises"
        tools:layout="@layout/fragment_exercises" />
    <fragment
        android:id="@+id/motivationFragment"
        android:name="com.example.workoutapp.fragments.MotivationFragment"
        android:label="@string/motivation"
        tools:layout="@layout/fragment_motivation" />
    <fragment
        android:id="@+id/trainFragment"
        android:name="com.example.workoutapp.fragments.TrainFragment"
        android:label="@string/train"
        tools:layout="@layout/fragment_train" />
    <fragment
        android:id="@+id/trainingPlansFragment"
        android:name="com.example.workoutapp.fragments.TrainingPlansFragment"
        android:label="@string/plans"
        tools:layout="@layout/fragment_training_plans" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.workoutapp.fragments.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
</navigation>